- flex__primary now only sets flex-grow — the element will no longer cause the flex parent to overflow when it’s content is of unrestrained width (#321)
- Adds the __no-shrink child class, and the --wrap modifier
- Improves the examples, and the documentation

--- a/scss/bitstyles/layout/flex/_.scss
+++ b/scss/bitstyles/layout/flex/_.scss
@@ -2,6 +2,14 @@
   @include flex;
 }
 
+.#{$bitstyles-namespace}l-flex--wrap {
+  @include flex--wrap;
+}
+
 .#{$bitstyles-namespace}l-flex__primary {
   @include flex__primary;
+}
+
+.#{$bitstyles-namespace}l-flex__no-shrink {
+  @include flex__no-shrink;
 }
